<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_type"
    tools:context=".ui.view.DetailFragment"
    tools:ignore="ExtraText">

/*ProgressBar: Un elemento de barra de progreso que se utiliza para indicar una carga en curso.*/
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="#493D3D"
        />

    /*ImageView con el id statusOffline: Un elemento de imagen que muestra un ícono de "offline". Se configura inicialmente
    con visibility="gone" para que no sea visible y se puede cambiar a visibility="visible" según sea necesario.*/
    <ImageView
        android:id="@+id/statusOffline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:src="@drawable/offline"
        android:contentDescription="@string/app_name" />

/*AppBarLayout: Un contenedor de diseño para la barra de aplicaciones que se desplaza junto con el contenido.
    Puede contener un CollapsingToolbarLayout y se utiliza para crear efectos de desplazamiento.*/
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/text_type">

        /*CollapsingToolbarLayout: Un contenedor de diseño especial que permite tener un título colapsable en la barra de aplicaciones.
        Contiene un ImageView para mostrar una imagen relacionada con el personaje y un Toolbar para mostrar acciones y
        títulos adicionales.*/
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"
            app:expandedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="Bulbasaur">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"

                android:contentDescription="@string/app_name"/>


            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    /*NestedScrollView: Un contenedor de desplazamiento que permite desplazar el contenido dentro del fragmento cuando hay
    demasiado contenido para caber en la pantalla. Tiene una propiedad layout_behavior que se establece
    en com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior para coordinar el desplazamiento con el AppBarLayout.*/
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_background"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_large">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvType1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_type"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="Planta" />

            <TextView
                android:id="@+id/tvType2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_type"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/tvType1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvType1"
                tools:text="Hielo" />

            <TextView
                android:id="@+id/textView3"
                style="@style/StyleTextView"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/hp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvType1"
                app:layout_constraintTop_toBottomOf="@+id/tvType1" />

            <TextView
                android:id="@+id/tvHp"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3"
                tools:text="55" />

            <TextView
                android:id="@+id/textView4"
                style="@style/StyleTextView"
                android:text="@string/speed"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/speed"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="21" />

            <TextView
                android:id="@+id/textView5"
                style="@style/StyleTextView"
                android:text="@string/attack"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/attack"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                tools:text="45" />

            <TextView
                android:id="@+id/textView6"
                style="@style/StyleTextView"
                android:text="@string/defense"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/defense"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="23" />

            <TextView
                android:id="@+id/textView7"
                style="@style/StyleTextView"
                android:text="@string/special_attack"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/specialAttack"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                tools:text="87" />

            <TextView
                android:id="@+id/textView8"
                style="@style/StyleTextView"
                android:text="@string/special_defense"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/specialDefense"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                tools:text="56" />

            <TextView
                android:id="@+id/textView9"
                style="@style/StyleTextView"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/height"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/height"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                tools:text="1m" />

            <TextView
                android:id="@+id/textView11"
                style="@style/StyleTextView"
                android:text="@string/weight"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/weight"
                style="@style/StyleTextView"
                android:layout_marginStart="@dimen/space_small"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                tools:text="5kg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>